Fix clipping issue in post card on Safari.

--- a/_sass/general/misc.scss
+++ b/_sass/general/misc.scss
@@ -100,10 +100,10 @@ a:focus-visible {
 @mixin preview-animation {
   box-sizing: border-box;
   transition: transform 1s ease 0s;
-  transform: perspective(1500px) rotateY(10deg);
+  transform: translateZ(-3.0rem) perspective(1500px) rotateY(10deg);
 
   &:hover {
-    transform: perspective(3000px) rotateY(5deg) scale(1.03);
+    transform: translateZ(-3.0rem) perspective(3000px) rotateY(5deg) scale(1.03);
     box-shadow: $box-shadow-backdrop;
   }
 }
